force-app/main/default/objects/DC_Generator_Switchgear__c/DC_Generator_Switchgear__c.object-meta.xml
<CustomObject>
    <label>Generator Switchgear</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Generator Switchgears</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>