force-app/main/default/objects/DC_Generator_Switchgear__c/fields/Generator__c.field-meta.xml
<CustomField>
    <fullName>Generator__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The associated Generator connected to this Switchgear.</description>
    <label>Generator</label>
    <referenceTo>DC_Generator_Power__c</referenceTo>
    <relationshipLabel>Generator Switchgears</relationshipLabel>
    <relationshipName>Generator_Switchgears</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>