force-app/main/default/objects/DC_Generator_Switchgear__c/fields/Max_Capacity_kw__c.field-meta.xml
<CustomField>
    <fullName>Max_Capacity_kw__c</fullName>
    <description>The amount of capacity, in kW, allocated from this Generator to this Switchgear.</description>
    <label>Max Capacity (kw)</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>