force-app/main/default/objects/DC_Generator_Switchgear__c/fields/Switchgear__c.field-meta.xml
<CustomField>
    <fullName>Switchgear__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The associated Switchgear connected to this Generator.</description>
    <label>Switchgear</label>
    <referenceTo>DC_Switchgear_Object__c</referenceTo>
    <relationshipLabel>Generator Switchgears</relationshipLabel>
    <relationshipName>Generator_Switchgears</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>